# discord-agent-gateway

./: .env.example  .gitignore  DISCORD_BOT_SETUP.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  agents.example.yaml  pyproject.toml  requirements.txt
scripts/: create_agent.py  manage_agents.py  verify_memory.py
src/: __init__.py  config.py  main.py
src/agents/: __init__.py  echo_agent.py  llm_agent.py
src/database/: __init__.py  models.py  repository.py
src/entrypoints/: __init__.py  discord_server.py
src/models/: __init__.py
src/services/discord/: __init__.py  bot_pool.py  commands.py  scheduler.py  ui.py
src/services/discord/handlers/: __init__.py  message_handler.py  ready_handler.py
src/utils/: __init__.py  logger.py  message_splitter.py
